list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")

FIND_PACKAGE(Criterion)

IF(ZLIB_FOUND)
    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I \"${ZLIB_INCLUDE_DIRS}\" -DCOMPILE_ZLIB")
ENDIF(ZLIB_FOUND)

if(CRITERION_FOUND)
    set(SOURCE_FILES_TEST tests.c)
    add_executable(TestSuite ${SOURCE_FILES_TEST})
    IF(CUDA_FOUND)
        ADD_DEPENDENCIES(TestSuite utils alg solvers string config gpu_utils)
        if(ZLIB_FOUND)
            target_link_libraries(TestSuite alg solvers utils string ini_parser config gpu_utils ${CMAKE_THREAD_LIBS_INIT} m criterion graph ${CUDA_LIBRARIES} zlib)
        else ()
            target_link_libraries(TestSuite alg solvers utils string ini_parser config gpu_utils ${CMAKE_THREAD_LIBS_INIT} m criterion graph ${CUDA_LIBRARIES} )
        endif()
    ELSE()
        ADD_DEPENDENCIES(TestSuite utils alg solvers string config)
        if(ZLIB_FOUND)
            target_link_libraries(TestSuite alg solvers utils string ini_parser config ${CMAKE_THREAD_LIBS_INIT} m criterion graph zlib)
        else()
            target_link_libraries(TestSuite alg solvers utils string ini_parser config ${CMAKE_THREAD_LIBS_INIT} m criterion graph)
        endif()
    ENDIF()
endif()

set(SOURCE_FILES_TEST valgring_toy_test.c)
add_executable(ToyTest ${SOURCE_FILES_TEST})
ADD_DEPENDENCIES(ToyTest utils alg solvers string config)

target_link_libraries(ToyTest alg solvers utils string ini_parser config ${CMAKE_THREAD_LIBS_INIT} m )
